# ExPAINTrimental-Drawing-Qt

./: CMakeLists.txt  LICENSE  README.md  resources.qrc
include/: UndoRedoManager.h  brushstroke.h  canvaswidget.h  colorpalettebutton.h  colorpickerwidget.h  mainwindow.h
src/: UndoRedoManager.cpp  brushstroke.cpp  canvaswidget.cpp  colorpalettebutton.cpp  colorpickerwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
